fix(ui-shell): remove `Content` left margin if `SideNav` is collapsed (#1428)
Fixes #1145
Alternative to #1406

--- a/docs/src/global.css
+++ b/docs/src/global.css
@@ -246,7 +246,6 @@ main.bx--content {
 
 @media (max-width: 1056px) {
   .bx--side-nav ~ .bx--content {
-    margin-left: 0;
     padding-left: 1rem;
     padding-right: 1rem;
   }
